--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,7 @@ jobs:
       # Build the Windows executable
       - name: Build Windows executable
         run: |
-          make | tee build_output.txt
-          # Extract the path of the built binary from the 'make' output
-          $BINARY_PATH = Select-String -Path build_output.txt -Pattern 'bin/[a-zA-Z0-9\.\-_]+\.exe' | ForEach-Object { $_.Matches.Value }
-          Write-Host "BINARY_PATH=$BINARY_PATH" >> $env:GITHUB_ENV
+          make
 
       # Upload the built binary to the release
       - name: Upload Release Asset
@@ -46,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ env.BINARY_PATH }}
-          asset_name: ${{ env.BINARY_PATH }}
+          asset_path: ./bin/focusframe.exe
+          asset_name: focusframe.exe
           asset_content_type: application/octet-stream
