--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,17 @@ jobs:
         run: |
           make
 
+      # Pack the ZIP Archive
+      - name: Pack ZIP Archive
+        run: |
+          $archiveName = "FocusFrame-$(git describe --tags)-windows-amd64.zip"
+          
+          Move-Item -Path ./bin/FocusFrame.exe -Destination ./FocusFrame.exe
+          Compress-Archive -Path "./FocusFrame.exe", 'README.md', 'LICENSE' -DestinationPath $archiveName
+          
+          echo "FILE_PATH=./$archiveName" >> $env:GITHUB_ENV
+          echo "FILE_NAME=$archiveName" >> $env:GITHUB_ENV
+
       # Upload the built binary to the release
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
@@ -43,6 +54,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./bin/focusframe.exe
-          asset_name: focusframe.exe
+          asset_path: ${{ env.FILE_PATH }}
+          asset_name: ${{ env.FILE_NAME }}
           asset_content_type: application/octet-stream
