--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,8 @@ jobs:
         with:
           go-version: "1.22"
 
+      - name: Run Tests
+        run: make test
+
       - name: Build
         run: make
