--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,10 @@ jobs:
         with:
           go-version: "1.22"
 
+      - name: Run Tests
+        run: |
+          make test
+
       # Build the Windows executable
       - name: Build Windows executable
         run: |
@@ -40,10 +44,10 @@ jobs:
       - name: Pack ZIP Archive
         run: |
           $archiveName = "FocusFrame-$(git describe --tags)-windows-amd64.zip"
-          
+
           Move-Item -Path ./bin/FocusFrame.exe -Destination ./FocusFrame.exe
           Compress-Archive -Path "./FocusFrame.exe", 'README.md', 'LICENSE' -DestinationPath $archiveName
-          
+
           echo "FILE_PATH=./$archiveName" >> $env:GITHUB_ENV
           echo "FILE_NAME=$archiveName" >> $env:GITHUB_ENV
 
